adding some moved elements through css

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .collage{
-    position:"absolute";
+    position:"absolute"; 
 }
 
-#special1 {background-color:#5f9ea0 ;}
+#special1 {background-color:#5f9ea0 }
