Cleaning up and trying to add my own font i made

--- a/style.css
+++ b/style.css
@@ -3,3 +3,8 @@
 }
 
 #special1 {background-color:#5f9ea0 }
+
+@font-face {
+    font-family:GrayGothic;
+    src: url(C:\Users\haile\Desktop\InteractivityIISP26\hello_world\GrayShreve_interactivityIISP2026_helloWorld\GrayGothic.ttf);
+}
