Co-authored-by: Leilei <lilyxia99@users.noreply.github.com>

--- a/style.css
+++ b/style.css
@@ -6,5 +6,5 @@
 
 @font-face {
     font-family:GrayGothic;
-    src: url(C:\Users\haile\Desktop\InteractivityIISP26\hello_world\GrayShreve_interactivityIISP2026_helloWorld\GrayGothic.ttf);
+    src: url(C:\Users\haile\Desktop\InteractivityIISP26\hello_world\GrayShreve_interactivityIISP2026_helloWorld\Fonts\GrayGothic.ttf);
 }
