--- a/style.css
+++ b/style.css
@@ -76,4 +76,4 @@ p{animation-name:mytrialanimation ;
 
 @keyframes mytrialanimation { 
 from {background-color:plum}
-to {background-color: rgb(145, 113, 75}
+to {background-color: rgb(145, 113, 75);}
