--- a/style.css
+++ b/style.css
@@ -77,3 +77,4 @@ p{animation-name:mytrialanimation ;
 @keyframes mytrialanimation { 
 from {background-color:plum}
 to {background-color: rgb(145, 113, 75);}
+}
