--- a/style2.css
+++ b/style2.css
@@ -26,3 +26,11 @@ color:rgb(250, 250, 250)}
     background-size: cover;
  }
 
+.footer {
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: rgb(235, 150, 39);
+color: white;
+text-align: center;}
