--- a/style2.css
+++ b/style2.css
@@ -5,12 +5,12 @@
 
 h1  {font-family:'GrayGothic';
     src: url("./Fonts/GrayGothic.ttf");
-color:rgb(250, 250, 250)} 
+color:rgb(82, 71, 71)} 
 
  .center{
         position:absolute; 
         left:50%;
-        top:57%;
+        top:90%;
         transform:translate(-50%,-50%);
         margin:0;
         padding:0;
@@ -21,8 +21,8 @@ color:rgb(250, 250, 250)}
 
  #background {
     background-image: url("./images/blackjpg.jpg");
-    height:100vh;
-    width:100%;
+    height:100%vh;
+    width:100%vw;
     background-size: cover;
  }
 
@@ -34,3 +34,67 @@ width: 100%;
 background-color: rgb(235, 150, 39);
 color: white;
 text-align: center;}
+
+ .displayexp{display:flex;
+        gap:20px;
+    
+    }
+
+    .displayexp div{
+        flex:1;
+        padding:10px;
+        color:white;
+        margin:45px;
+    }
+
+    .flexcontainer{
+        display:flex; 
+        width:80vw;
+        justify-content: center;
+        height:120px;
+        align-items:center;
+    }
+ img {
+  position: absolute;
+  clip: rect(0px,600px,1000px,0px);}
+
+  p{animation-name:mytrialanimation;
+    width:100px;
+    height:100px;
+    position: relative; 
+    animation-duration:15s ;
+    animation-iteration-count:2 ;
+    animation-direction: alternate-reverse;
+}
+
+@keyframes mytrialanimation { 
+from {background-color:rgb(232, 182, 232)}
+to {background-color: rgb(205, 118, 13);}
+}
+
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
+details {
+  border-bottom: 1px solid #8c2424;
+  padding: 10px 5px;
+}
+
+details:hover, details:focus {
+  cursor: pointer;
+}
+
+details[open] {
+  background-color: #ebb5e4;
+}
+
+details p {
+  padding-left: 20px;
+}
+
+summary {
+  font-size: 20px;
+  font-weight: bold;
+}
